<resources>
    <string name="app_name">SaveUs</string>
    <string-array name="array_name">
        <item>עברית</item>
        <item>אנגלית</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f_b1_security_text1">פרטיות וביטחון</string>
    <string name="f_b1_m_text2">מניעת התפשטות הקורונה</string>
    <string name="f_b1_she_text3">המטרה של כולנו</string>
    <string name="f_b1_now_text4">עכשיו תוכלו לסייע באופן אקטיבי</string>
    <string name="f_b1_dont_text5">ובלי חשש לפגיעה בפרטיותכם</string>
    <string name="f_b2_simple_text1">פשוט ומהיר</string>
    <string name="f_b3_Notifications_text1">התראות ועדכונים</string>
    <string name="f_b3_time_text2"> התראה בזמן אמת</string>
    <string name="f_b3_come_text3">תתקבל במצב בו דיווחתם על</string>
    <string name="f_b3_place_text4">מיקומכם הנוכחי ויש עליו מידע מעודכן כאזור נגוע</string>
    <string name="f_b3_notificantion_text5">התראה מתעדכנת</string>
    <string name="f_b3_come_text6"> תתקבל כאשר אחד מהמקומות</string>
    <string name="f_b3_realy_text7">שדיווחתם עליהם בזמן אמת או בדיעבד</string>
    <string name="fb_3_report_text8">ידווח כאזור נגוע</string>
    <string name="flogin_welcom">ברוכים הבאים</string>
    <string name="f_login_hinttext_name">שם</string>
    <string name="f_login_email">דואר אלקטרוני</string>
    <string name="f_login_phone">מספר טלפון</string>
    <string name="skip">דלג</string>
    <string name="registration">הרשמה</string>
    <string name="f_login_health_text">הבריאות והביטחון שלכם נמצאים בעדיפות עליונה,</string>
    <string name="f_login_helpyou_text">אנחנו כאן לעזור לכם לעקוב אחר הפעילות ולתעד אותה</string>
    <string name="f_login_enformaion_text">כל המידע אנונימי לחלוטין אין מה לחשוש</string>
    <string name="f_login_aprove">אני מאשר את</string>
    <string name="f_login_Bylaws"><u>התקנון</u></string>
    <string name="f_login_and">ואת</string>
    <string name="f_login_Terms"><u>תנאי המבצע</u></string>
    <string name="main">ראשי</string>
    <string name="myplaces">המקומות שלי</string>
    <string name="notifacations">התראות</string>
    <string name="title_activity_maps">Map</string>

    <string name="f_homestart_icoming">הגעתי</string>
    <string name="f_home_start_start_regis">התחל לרשום</string>
    <string name="f_start_stop">עצור</string>
    <string name="f_placemap_onmap">על מפה</string>
    <string name="f_placemap_myplaces">המקומות שלי</string>
    <string name="add_place">הוסף \n  מיקום</string>
    <string name="f_chenge_place_save">שמירה</string>
    <string name="f_chenge_editplace">עריכת מיקום</string>
    <string name="f_chenge_adddate">הוספת תאריך</string>
    <string name="f_cheng_start">התחלה</string>
    <string name="f_chenge_end">סיום</string>
    <string name="f_chenge_all">סך הכל</string>
    <string name="f_chenge_clear">מחק דיווח</string>
    <string name="f_notif_mynotif">ההתראות שלי</string>
    <string name="f_n_numberdie">מספר מתים</string>
    <string name="f_n_numbrecoverers">מספר מחלימים</string>
    <string name="f_n_Numberpatients">מספר חולים</string>
    <string name="f_n_Therearenoupdatesso">אין עדכונים עד כה עבורך</string>
    <string name="f_a_p_addplace">הוספת מיקום</string>
    <string name="f_a_p_Address">כתובת</string>
    <string name="f_a_p_adddate">הוספת תאריך</string>
    <string name="f_pro_PersonalInformation">פרטים אישיים</string>
    <string name="f_pro_username">שם משתמש</string>
    <string name="f_pro_phone">מספר טלפון</string>
    <string name="f_pro_datebirth">תאריך לידה</string>
    <string name="f_pro_email">דואל</string>
    <string name="f_pro_language">שפה</string>
    <string name="f_pro_Getmobilealerts">קבלת התראות לנייד</string>
    <string name="f_pro_Howtheappworks">איך עובדת האפליקציה?</string>
    <string name="f_pro_TermsofUse">תנאי שימוש</string>
    <string name="f_pro_TheplacesIvisitedwillcoout">ייצוא המקומות בהם ביקרתי</string>
    <string name="f_pro_Reportamalfunction">דיווח על תקלה</string>
    <string name="onboarding2_text"> <b>התראה בזמן אמת</b> תתקבל במצב בו דיווחתם על\n מיקומכם הנוכחי ויש עליו מידע מעודכן כאזור נגוע  \n\n </string>
    <string name="onboarding22_text"> <b>התראה מתעדכנת</b> תתקבל כאשר אחד מהמקומות\n שדיווחתם עליהם, בזמן אמת או בדיעבד, \n ידווח כאזור נגוע  \n\n</string>
    <string name="f_pro_Sharewithfriends">שתף עם חברים</string>
    <string name="onboarding1_text">מניעת התפשטות הקורונה היא <b>המטרה של כולנו</b> \n\n עכשיו תוכלו לסייע באופן אקטיבי \n <b>ובלי חשש לפגיעה בפרטיותכם</b></string>


</resources>
