<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginF">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="60">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="18"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="wrap_content"
                android:paddingTop="17dp"
                android:paddingBottom="18dp"
                android:src="@drawable/logovector"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="195"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="105"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:paddingBottom="11.3dp"
                android:src="@drawable/logo"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="14"/>


        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorflogin_welcom"
        android:layout_marginEnd="0.5dp"
        android:layout_marginStart="0.5dp"
        android:layout_weight="104">
        <TextView
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/flogin_color_welcome"
            android:text="@string/flogin_welcom"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:paddingStart="21dp"
        android:textColor="#051549"
        android:textSize="14sp"
        android:text="@string/f_login_health_text"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="21dp"
        android:textColor="#051549"
        android:maxLines="1"
        android:textSize="14sp"
        android:text="@string/f_login_helpyou_text"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="21dp"
        android:textColor="#051549"
        android:maxLines="1"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/f_login_enformaion_text"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="17sp"
        android:id="@+id/A_LOGIN_name"
        android:paddingStart="7dp"

        android:outlineSpotShadowColor="#fafbfc"
        android:textColorHint="#b0b0b0"
        android:hint="@string/f_login_hinttext_name"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="41dp"
        android:layout_weight="45"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="17sp"
        android:id="@+id/A_LOGIN_email"
        android:textColorHint="#b0b0b0"
        android:paddingStart="7dp"
        android:outlineSpotShadowColor="#fafbfc"
        android:hint="@string/f_login_email"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="41dp"
        android:layout_weight="45"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="17sp"
        android:id="@+id/A_LOGIN_phone"
        android:paddingStart="7dp"
        android:outlineSpotShadowColor="#fafbfc"
        android:textColorHint="#b0b0b0"
        android:hint="@string/f_login_phone"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="41dp"
        android:layout_weight="45"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="19"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="63"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_weight="278">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b0b0b0"
                android:id="@+id/flogin_agree_t1"
                android:maxLines="1"
                android:layout_marginEnd="2dp"
                android:textSize="13sp"
                android:text="@string/f_login_aprove"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorflogin_welcom"
                android:text="@string/f_login_Bylaws"
                android:autoLink="all"
                android:linksClickable="true"
                android:layout_marginEnd="3dp"
                android:textStyle="bold"
                android:textSize="13sp"
                android:id="@+id/flogin_agree_t2"
                android:layout_toEndOf="@id/flogin_agree_t1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b0b0b0"
                android:id="@+id/flogin_agree_t3"
                android:layout_toEndOf="@id/flogin_agree_t2"
                android:maxLines="1"
                android:layout_marginEnd="2dp"
                android:textSize="13sp"
                android:text="@string/f_login_and"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorflogin_welcom"
                android:autoLink="all"
                android:text="@string/f_login_Terms"
                android:layout_marginStart="2dp"
                android:textStyle="bold"
                android:textSize="13sp"
                android:id="@+id/flogin_agree_t4"
                android:layout_toEndOf="@id/flogin_agree_t3"/>


        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="19"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="56"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="40">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="133"
            android:text="@string/skip"
            android:textSize="17sp"
            android:textColor="#b0b0b0"
            android:id="@+id/login_skip_button"
            android:background="@drawable/circle_flogin_button_skip"
            android:layout_height="match_parent"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="14"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="133"
            android:textSize="17sp"
            android:text="@string/registration"
            android:id="@+id/Activity_login_registar"
            android:textColor="#ffffff"
            android:background="@drawable/circle_flogin_butten_registration"
            android:layout_height="match_parent"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"/>



    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="56"/>

</LinearLayout>






    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_weight="106"-->
    <!--        >-->
    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:orientation="horizontal">-->
    <!--            <View-->
    <!--                android:layout_width="0dp"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:layout_weight="26"/>-->
    <!--            <TextView-->
    <!--                android:layout_width="0dp"-->
    <!--                android:layout_weight="308"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:gravity="center"-->
    <!--               -->
    <!--                android:lineHeight="21sp"-->
    <!--                android:textSize="16sp"-->
    <!--                android:textColor="#051549"-->
    <!--                android:text="הבריאות והביטחון שלכם נמצאים בעדיפות עליונה,-->
    <!--אנחנו כאן לעזור לכם לעקוב אחר הפעילות ולתעד אותה.-->
    <!--כל המידע אנונימי לחלוטין אין מה לחשוש"/>-->

    <!--            <View-->
    <!--                android:layout_width="0dp"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:layout_weight="26"/>-->

    <!--        </LinearLayout>-->


    <!--    </LinearLayout>-->





