<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Fragments.OnBoarding1">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="607">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="242"
                android:src="@drawable/group"
               />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="46"/>

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#00b2ab"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:text="@string/f_b3_Notifications_text1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="96"
            android:text="@string/onboarding2_text"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#454e6c"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="98"
            android:gravity="center"
            android:text="@string/onboarding22_text"
            android:textColor="#454e6c"
            android:textSize="16sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="26"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_weight="21"
        android:layout_height="0dp"/>
</LinearLayout>